[package]
name = "remoting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] } # 异步网络库
futures = "0.3" # 提供 Stream trait
prost = "0.11" # 处理 protobuf 的库
prost-types = "0.11" # 处理 protobuf 的库
bytes = "1" # 高效处理网络 buffer 的库
tracing = "0.1" # 跟踪
tracing-subscriber = "0.3"
thiserror = "1"

common = { path = "../common" }


[build-dependencies]
prost-build = "0.11" # 处理 protobuf 的库
anyhow = "1" # 错误处理